@@ -4,10 +4,8 @@ import com.ssafy.artchain.funding.entity.Funding;
 import com.ssafy.artchain.funding.entity.FundingProgressStatus;
 import lombok.Getter;
 
-import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Getter
 public class FundingResponseDto {
@@ -16,39 +14,52 @@ public class FundingResponseDto {
     private Long entId;
     private String name;
     private String poster;
-    private String description;
-    private String investmentStructure;
-    private BigDecimal estimatedReturn;
-    private String riskNotice;
+    private String category;
+    private String descriptionImg;
+    private LocalDate recruitStart;
+    private LocalDate recruitEnd;
+    private LocalDate settlement;
     private Long goalCoinCount;
     private Long nowCoinCount;
     private String contractAddress;
-    private String attachment;
-    private String category;
-    private Boolean isAllow;
+    private Long totalBudget;
+    private int unitPrice;
+    private int bep;
     private FundingProgressStatus progressStatus;
-    private LocalDate recruitEnd;
+    private Boolean isAllow;
     private List<FundingNoticeResponseDto> noticeList;
+    private List<FundingScheduleResponseDto> scheduleList;
+    private List<FundingExpectedReturnResponseDto> expectedReturnList;
+    private List<FundingSaleResponseDto> saleList;
+    private List<FundingCostResponseDto> costList;
 
     public FundingResponseDto(Funding funding) {
         this.id = funding.getId();
         this.entId = funding.getEntId();
         this.name = funding.getName();
         this.poster = funding.getPoster();
-        this.description = funding.getDescription();
-        this.investmentStructure = funding.getInvestmentStructure();
-        this.estimatedReturn = funding.getEstimatedReturn();
-        this.riskNotice = funding.getRiskNotice();
+        this.category = funding.getCategory();
+        this.descriptionImg = funding.getDescriptionImg();
+        this.recruitStart = funding.getRecruitStart();
+        this.recruitEnd = funding.getRecruitEnd();
+        this.settlement = funding.getSettlement();
         this.goalCoinCount = funding.getGoalCoinCount();
         this.nowCoinCount = funding.getNowCoinCount();
         this.contractAddress = funding.getContractAddress();
-        this.attachment = funding.getAttachment();
-        this.category = funding.getCategory();
-        this.isAllow = funding.getIsAllow();
+        this.totalBudget = funding.getTotalBudget();
+        this.unitPrice = funding.getUnitPrice();
+        this.bep = funding.getBep();
         this.progressStatus = funding.getProgressStatus();
-        this.recruitEnd = funding.getRecruitEnd();
+        this.isAllow = funding.getIsAllow();
         this.noticeList = funding.getNoticeList().stream().map(FundingNoticeResponseDto::new)
-                .collect(
-                        Collectors.toList());
+                .toList();
+        this.scheduleList = funding.getScheduleList().stream().map(FundingScheduleResponseDto::new)
+                .toList();
+        this.expectedReturnList = funding.getExpectedReturnList().stream().map(FundingExpectedReturnResponseDto::new)
+                .toList();
+        this.saleList = funding.getSaleList().stream().map(FundingSaleResponseDto::new)
+                .toList();
+        this.costList = funding.getCostList().stream().map(FundingCostResponseDto::new)
+                .toList();
     }
 }
